<resources>
    <string name="app_name">Google Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="you_can_see_letters_numbers_periods"><![CDATA[you can see letters, numbers & periods]]></string>
    <string name="use_8_or_more_characters_with_a_mix_of_letters_numbers_symbols"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
    <string name="next_button">Next</string>
    <string name="show_password_checkBox">Show Password</string>
    <string name="sign_in_instead_textView">sign in instead</string>
    <string name="use_my_current_email_instead_textView">Use my current email instead</string>
    <string name="create_your_google_account_textView">Create your Google Account</string>
</resources>