<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google_logo"/>

    <TextView
        android:id="@+id/creatAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_your_google_account_textView"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/creatAccountTextView"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="-77dp"
            tools:layout_editor_absoluteY="6dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name"
        app:layout_constraintBottom_toBottomOf="@+id/firstname"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guidline"
        app:layout_constraintStart_toEndOf="@+id/firstname"
        app:layout_constraintTop_toTopOf="@+id/firstname"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="-77dp"
            tools:layout_editor_absoluteY="6dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        app:endIconDrawable="@drawable/gmail_com_icon"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guidline"
        app:layout_constraintStart_toStartOf="@+id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/firstname"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="-77dp"
            tools:layout_editor_absoluteY="5dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/confirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/useMycurrentemail"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="-77dp"
            tools:layout_editor_absoluteY="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/end_vertical_guidline"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="-77dp"
            tools:layout_editor_absoluteY="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/youCanSee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_see_letters_numbers_periods"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/use8Ormore"
        android:layout_width="373dp"
        android:layout_height="35dp"
        android:layout_marginEnd="21dp"
        android:text="@string/use_8_or_more_characters_with_a_mix_of_letters_numbers_symbols"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/useMycurrentemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/use_my_current_email_instead_textView"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/youCanSee" />

    <TextView
        android:id="@+id/signInInstead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sign_in_instead_textView"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button_horizental_guidline"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/next_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/signInInstead"
        app:layout_constraintEnd_toEndOf="@id/end_vertical_guidline"
        app:layout_constraintTop_toTopOf="@+id/signInInstead" />

    <CheckBox
        android:id="@+id/checkBox_showpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_password_checkBox"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuidline"
        app:layout_constraintTop_toBottomOf="@+id/use8Ormore" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startVerticalGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_vertical_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_horizental_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="573dp" />


</androidx.constraintlayout.widget.ConstraintLayout>